--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "main": "dist/cjs.js",
   "engines": {
-    "node": ">= 10.13.0"
+    "node": ">= 12.13.0"
   },
   "scripts": {
     "start": "npm run build -- -w",
@@ -30,59 +30,57 @@
     "test:coverage": "npm run test:only -- --collectCoverageFrom=\"src/**/*.js\" --coverage",
     "pretest": "npm run lint",
     "test": "npm run test:coverage",
-    "prepare": "npm run build",
-    "release": "standard-version",
-    "defaults": "webpack-defaults"
+    "prepare": "husky install && npm run build",
+    "release": "standard-version"
   },
   "files": [
     "dist"
   ],
   "peerDependencies": {
-    "webpack": "^5.0.0",
-    "postcss": "^7.0.0 || ^8.0.1"
+    "postcss": "^7.0.0 || ^8.0.1",
+    "webpack": "^5.0.0"
   },
   "dependencies": {
     "cosmiconfig": "^7.0.0",
     "klona": "^2.0.4",
-    "semver": "^7.3.4"
+    "semver": "^7.3.5"
   },
   "devDependencies": {
-    "@babel/cli": "^7.12.10",
-    "@babel/core": "^7.12.10",
-    "@babel/preset-env": "^7.12.11",
-    "@commitlint/cli": "^11.0.0",
-    "@commitlint/config-conventional": "^11.0.0",
-    "@webpack-contrib/defaults": "^6.3.0",
+    "@babel/cli": "^7.13.16",
+    "@babel/core": "^7.14.2",
+    "@babel/preset-env": "^7.14.2",
+    "@commitlint/cli": "^12.1.4",
+    "@commitlint/config-conventional": "^12.1.4",
     "@webpack-contrib/eslint-config-webpack": "^3.0.0",
     "babel-jest": "^26.6.3",
     "cross-env": "^7.0.3",
-    "cssnano": "^4.1.10",
+    "cssnano": "^5.0.2",
     "del": "^6.0.0",
     "del-cli": "^3.0.1",
-    "eslint": "^7.17.0",
-    "eslint-config-prettier": "^7.1.0",
+    "eslint": "^7.26.0",
+    "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.22.1",
-    "husky": "^4.3.6",
+    "husky": "^6.0.0",
     "jest": "^26.6.3",
-    "less": "^4.0.0",
-    "less-loader": "^8.0.0",
-    "lint-staged": "^10.5.3",
-    "memfs": "^3.2.0",
+    "less": "^4.1.1",
+    "less-loader": "^9.0.0",
+    "lint-staged": "^11.0.0",
+    "memfs": "^3.2.2",
     "midas": "^2.0.3",
     "npm-run-all": "^4.1.5",
-    "postcss": "^8.2.2",
+    "postcss": "^8.2.15",
     "postcss-dark-theme-class": "^0.5.1",
-    "postcss-import": "^14.0.0",
+    "postcss-import": "^14.0.2",
     "postcss-js": "^3.0.3",
-    "postcss-nested": "^5.0.3",
+    "postcss-nested": "^5.0.5",
     "postcss-short": "^5.0.0",
-    "prettier": "^2.2.1",
-    "sass": "^1.32.0",
-    "sass-loader": "^10.1.0",
-    "standard-version": "^9.1.0",
+    "prettier": "^2.3.0",
+    "sass": "^1.32.13",
+    "sass-loader": "^11.1.1",
+    "standard-version": "^9.3.0",
     "strip-ansi": "^6.0.0",
     "sugarss": "^3.0.3",
-    "webpack": "^5.11.1"
+    "webpack": "^5.37.0"
   },
   "keywords": [
     "css",
